syntax = "proto3";

package opciones;

service OpcionesService {
    rpc CreateOpcion (CreateOpcionRequest) returns (Opcion) {}
    rpc ListOpciones (ListOpcionesRequest) returns (ListOpcionesResponse) {}
    rpc GetOpcion (GetOpcionRequest) returns (Opcion) {}
    rpc UpdateOpcion (UpdateOpcionRequest) returns (Opcion) {}
    rpc DeleteOpcion (DeleteOpcionRequest) returns (DeleteOpcionResponse) {}
}

message Opcion {
    int32 usuario_id = 1;
    int32 empresa_modulo_opcion_id = 2;
    bool puede_ver = 3;
    bool puede_crear = 4;
    bool puede_editar = 5;
    bool puede_eliminar = 6;
    string asignado_por = 7;
}

message CreateOpcionRequest {
    int32 usuario_id = 1;
    int32 empresa_modulo_opcion_id = 2;
    bool puede_ver = 3;
    bool puede_crear = 4;
    bool puede_editar = 5;
    bool puede_eliminar = 6;
    string asignado_por = 7;
}

message GetOpcionRequest {
    int32 usuario_id = 1;
    int32 empresa_modulo_opcion_id = 2;
}

message ListOpcionesRequest {
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
}

message ListOpcionesResponse {
    repeated Opcion opciones = 1;
    int32 total = 2;
}

message UpdateOpcionRequest {
    int32 usuario_id = 1;
    int32 empresa_modulo_opcion_id = 2;
    bool puede_ver = 3;
    bool puede_crear = 4;
    bool puede_editar = 5;
    bool puede_eliminar = 6;
    string asignado_por = 7;
}

message DeleteOpcionRequest {
    int32 usuario_id = 1;
    int32 empresa_modulo_opcion_id = 2;
}

message DeleteOpcionResponse {
    bool success = 1;
}
